10 OTA Firmware Update

--- a/main/webpage/app.css
+++ b/main/webpage/app.css
@@ -2,6 +2,7 @@
 
 body {
     background-color: #f1f1f1;
+    /* background-color: #222222; */
     font-family: HelveticaNeueRegular, HelveticaNeue-Regular, "Helvetica Neue Regular", HelveticaNeue, "Helvetica Neue", Helvetica, Arial;
     color: #0272B7;
 }
